--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <div class="col-lg-4">
                     <div class="d-flex flex-column align-items-center">
                         <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
-                        <div class="text-muted">Email</div><a class="lead font-weight-bold"
+                        <div class="text-muted">Email</div><a style="color:#212529;" class="lead font-weight-bold"
                             href="mailto:name@example.com">thinhlam749@gmail.com </a>
                     </div>
                 </div>
